force-app/main/default/objects/Knowledge__kav/fields/Applicable_Region__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Region__c</fullName>
    <description>Regions that this article is relevant to, from a closed list.</description>
    <inlineHelpText>This content is applicable to the regions here.</inlineHelpText>
    <label>Applicable Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMEA</fullName>
            </value>
            <value>
                <fullName>AMR</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
                <isActive>false</isActive>
                <label>APJ</label>
            </value>
            <value>
                <fullName>EMEA</fullName>
                <isActive>false</isActive>
                <label>EMEA</label>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Greater China</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
                <isActive>false</isActive>
                <label>LATAM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>