force-app/main/default/objects/Knowledge__kav/fields/Article_Body__c.field-meta.xml
<CustomField>
    <fullName>Article_Body__c</fullName>
    <description>Rich text editor to capture Knowledge Article content.</description>
    <label>Article Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>