force-app/main/default/objects/Knowledge__kav/fields/Article_Categories__c.field-meta.xml
<CustomField>
    <fullName>Article_Categories__c</fullName>
    <description>This field stores all the categories selected before submitting review as comma separate values.</description>
    <label>Article Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>