force-app/main/default/objects/Knowledge__kav/fields/Article_Version_Author__c.field-meta.xml
<CustomField>
    <fullName>Article_Version_Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who has written the article and can be contacted for the content of that article.</description>
    <inlineHelpText>Please enter your name here if you are writing this article version. For questions on this content please add a post and @mention the Article Version Author.</inlineHelpText>
    <label>Article Version Author</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>