force-app/main/default/objects/Knowledge__kav/fields/Content_Format__c.field-meta.xml
<CustomField>
    <fullName>Content_Format__c</fullName>
    <description>Format of the content</description>
    <inlineHelpText>Format of the content</inlineHelpText>
    <label>Content Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>