force-app/main/default/objects/Knowledge__kav/fields/CP_Article_Approval_Status__c.field-meta.xml
<CustomField>
		<fullName>CP_Article_Approval_Status__c</fullName>
        <description>This field tracks the approval status of articles which the user wants to be enabled for CP Visibility.</description>
        <label>CP Article Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>