force-app/main/default/objects/Knowledge__kav/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <description>This field is for the Document Number on ICE files. Synced via ICE-SFDC integration and is unique for ICE files.Used as external id for upsert/delete of ICE files. Backend field.</description>
    <label>Document Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>