force-app/main/default/objects/Knowledge__kav/fields/External_Content_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Content_ID__c</fullName>
    <description>This field Content ID for reference back to External content, admin field and hidden in user layout.</description>
    <label>External Content ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>