force-app/main/default/objects/Knowledge__kav/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <description>To select instrument name (from a closed list)</description>
    <label>Instrument</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Analysis</fullName>
                <isActive>false</isActive>
                <label>Analysis</label>
            </value>
            <value>
                <fullName>Ancillary Array Equipment</fullName>
            </value>
            <value>
                <fullName>Ancilliary Array Equipment</fullName>
                <isActive>false</isActive>
                <label>Ancilliary Array Equipment</label>
            </value>
            <value>
                <fullName>AutoLoader</fullName>
            </value>
            <value>
                <fullName>BeadArray Reader</fullName>
            </value>
            <value>
                <fullName>BeadXpress Reader</fullName>
            </value>
            <value>
                <fullName>cBot</fullName>
            </value>
            <value>
                <fullName>ClearScan</fullName>
            </value>
            <value>
                <fullName>Cluster Station</fullName>
            </value>
            <value>
                <fullName>ddSEQ</fullName>
            </value>
            <value>
                <fullName>Eco</fullName>
            </value>
            <value>
                <fullName>Fragment Analyzer</fullName>
            </value>
            <value>
                <fullName>Genome Analyzer</fullName>
            </value>
            <value>
                <fullName>Hamilton</fullName>
            </value>
            <value>
                <fullName>HiScan</fullName>
            </value>
            <value>
                <fullName>HiSeq</fullName>
            </value>
            <value>
                <fullName>HiSeq 1000-2500</fullName>
            </value>
            <value>
                <fullName>HiSeq 3000</fullName>
            </value>
            <value>
                <fullName>HiSeq 4000</fullName>
            </value>
            <value>
                <fullName>HiSeq HD</fullName>
                <isActive>false</isActive>
                <label>HiSeq HD</label>
            </value>
            <value>
                <fullName>HiSeq X</fullName>
            </value>
            <value>
                <fullName>IAPS</fullName>
            </value>
            <value>
                <fullName>IAPS (Tecan)</fullName>
                <isActive>false</isActive>
                <label>IAPS (Tecan)</label>
            </value>
            <value>
                <fullName>Informatics</fullName>
                <isActive>false</isActive>
                <label>Informatics</label>
            </value>
            <value>
                <fullName>iScan</fullName>
            </value>
            <value>
                <fullName>iScan Autoloader</fullName>
                <isActive>false</isActive>
                <label>iScan Autoloader</label>
            </value>
            <value>
                <fullName>iSeq</fullName>
                <isActive>false</isActive>
                <label>iSeq</label>
            </value>
            <value>
                <fullName>iSeq 100</fullName>
            </value>
            <value>
                <fullName>MiniSeq</fullName>
            </value>
            <value>
                <fullName>MiSeq</fullName>
                <isActive>false</isActive>
                <label>MiSeq</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>