force-app/main/default/objects/Knowledge__kav/fields/Is_Logged_in_User_the_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Logged_in_User_the_Assigned_User__c</fullName>
    <description>Field to determine whether the logged in User is the Assigned to User.</description>
    <formula>AssignedToId  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Logged in User the Assigned User</label>
    <type>Checkbox</type>
</CustomField>