force-app/main/default/objects/Knowledge__kav/fields/Knowledge_Source__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Source__c</fullName>
    <description>To capture source of article either DCP or ICE</description>
    <inlineHelpText>Knowledge repository source.</inlineHelpText>
    <label>Knowledge Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICE</fullName>
            </value>
            <value>
                <fullName>DCP</fullName>
                <default>true</default>
                <label>DCP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>