force-app/main/default/objects/Knowledge__kav/fields/Library_Prep_Category__c.field-meta.xml
<CustomField>
    <fullName>Library_Prep_Category__c</fullName>
    <description>To capture library prep category</description>
    <label>Library Prep Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amplicon Library Prep</fullName>
            </value>
            <value>
                <fullName>AmpliSeq</fullName>
            </value>
            <value>
                <fullName>Custom/Third-party Library Prep</fullName>
            </value>
            <value>
                <fullName>DNA Library Prep</fullName>
            </value>
            <value>
                <fullName>Enrichment-Based Library Prep</fullName>
            </value>
            <value>
                <fullName>Epigenetics Library Prep</fullName>
            </value>
            <value>
                <fullName>General Library Prep</fullName>
            </value>
            <value>
                <fullName>IVD Library Prep</fullName>
            </value>
            <value>
                <fullName>RNA Library Prep</fullName>
            </value>
            <value>
                <fullName>Trusight Oncology/Tumor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>