force-app/main/default/objects/Knowledge__kav/fields/Primary_Approver__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User to Primarily Approve the Knowledge Article Record</description>
    <label>Primary Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge1</relationshipName>
    <type>Lookup</type>
</CustomField>