force-app/main/default/objects/Knowledge__kav/fields/Secondary_Approver__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who approve records secondary</description>
    <label>Secondary Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge2</relationshipName>
    <type>Lookup</type>
</CustomField>