force-app/main/default/objects/Knowledge__kav/fields/Secondary_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Workflow__c</fullName>
    <description>Workflow for approval process. Manually filled. The picklist values in both primary and secondary workflow fields need to be in sync.</description>
    <label>Secondary Workflow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bioinformatics</fullName>
            </value>
            <value>
                <fullName>Bulletins</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>External Content</fullName>
            </value>
            <value>
                <fullName>Instrumentation</fullName>
            </value>
            <value>
                <fullName>Library Preparation</fullName>
            </value>
            <value>
                <fullName>Mega Guide</fullName>
            </value>
            <value>
                <fullName>Microarray</fullName>
            </value>
            <value>
                <fullName>Process Guidelines</fullName>
            </value>
            <value>
                <fullName>Product Support</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>