force-app/main/default/objects/Knowledge__kav/fields/Source_Language__c.field-meta.xml
<CustomField>
    <fullName>Source_Language__c</fullName>
    <description>This field will be used to store the Content Language coming in from ICE</description>
    <label>Source Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>