force-app/main/default/objects/Knowledge__kav/recordTypes/Bulletin.recordType-meta.xml
<RecordType>
    <fullName>Bulletin</fullName>
    <active>true</active>
    <description>Customer-facing documents, written by technical experts, containing timely and useful information that is not found within other Illumina documentation sources.</description>
    <label>Bulletin</label>
</RecordType>