force-app/main/default/objects/Knowledge__kav/recordTypes/Draft.recordType-meta.xml
<RecordType>
    <fullName>Draft</fullName>
    <active>true</active>
    <description>For creating draft version without publish functionality</description>
    <label>Draft</label>
</RecordType>