force-app/main/default/objects/Knowledge__kav/recordTypes/Evaluation_Aid.recordType-meta.xml
<RecordType>
    <fullName>Evaluation_Aid</fullName>
    <active>true</active>
    <description>Content that is intended to help with the evaluation and resolution of customer issues and complaints.</description>
    <label>Evaluation Aid</label>
</RecordType>