force-app/main/default/objects/Knowledge__kav/recordTypes/Guide.recordType-meta.xml
<RecordType>
    <fullName>Guide</fullName>
    <active>true</active>
    <description>Description of the templates with maximum 3 rows of text</description>
    <label>Guide</label>
</RecordType>