force-app/main/default/objects/Knowledge__kav/recordTypes/Notification.recordType-meta.xml
<RecordType>
    <fullName>Notification</fullName>
    <active>true</active>
    <description>Description of the templates with maximum 3 rows of text</description>
    <label>Notification</label>
</RecordType>