force-app/main/default/objects/Knowledge__kav/recordTypes/Policy.recordType-meta.xml
<RecordType>
    <fullName>Policy</fullName>
    <active>true</active>
    <description>Description of the templates with maximum 3 rows of text</description>
    <label>Policy</label>
</RecordType>