force-app/main/default/objects/Knowledge__kav/recordTypes/Publish.recordType-meta.xml
<RecordType>
    <fullName>Publish</fullName>
    <active>true</active>
    <description>For accessing Publish functionality</description>
    <label>Publish</label>
</RecordType>