force-app/main/default/objects/Knowledge__kav/recordTypes/Reference_Material.recordType-meta.xml
<RecordType>
    <fullName>Reference_Material</fullName>
    <active>true</active>
    <description>Content that is intended to help users complete tasks according to business processes and best practices</description>
    <label>Reference Material</label>
</RecordType>