force-app/main/default/objects/Knowledge__kav/recordTypes/Release_Note.recordType-meta.xml
<RecordType>
    <fullName>Release_Note</fullName>
    <active>true</active>
    <description>Description of the templates with maximum 3 rows of text</description>
    <label>Release Note</label>
</RecordType>