force-app/main/default/objects/Knowledge__kav/recordTypes/Template.recordType-meta.xml
<RecordType>
    <fullName>Template</fullName>
    <active>true</active>
    <description>Description of the templates with maximum 3 rows of text</description>
    <label>Template</label>
</RecordType>