force-app/main/default/objects/Knowledge__kav/validationRules/Check_ArticleversionAuthor_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_ArticleversionAuthor_Mandatory</fullName>
    <active>true</active>
    <description>Article Version Author is mandatory when Knowledge source is DCP.</description>
    <errorConditionFormula>AND( ISPICKVAL(Knowledge_Source__c , &apos;DCP&apos; ) , ISBLANK( Article_Version_Author__c ) )</errorConditionFormula>
    <errorMessage>Article Version Author is required.</errorMessage>
</ValidationRule>