force-app/main/default/objects/Knowledge__kav/validationRules/Check_KA_Workflow_DCP_Knowledge_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_KA_Workflow_DCP_Knowledge_Source</fullName>
    <active>true</active>
    <description>The Primary and Secondary Workflow fields cannot have the value &apos;External Content&apos; if Knowledge Source field has value &apos;DCP&apos;.</description>
    <errorConditionFormula>AND(
	NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
	TEXT(Knowledge_Source__c) = 	$Label.Knowledge_Source_DCP,
			OR(
					 TEXT(Primary_Workflow__c) =  $Label.KnowledgeWorkflowExternalContent,
					 TEXT(Secondary_Workflow__c) = $Label.KnowledgeWorkflowExternalContent
			)
	)</errorConditionFormula>
    <errorMessage>Primary and Secondary Workflow cannot have value as External Content for  DCP Knowledge Source</errorMessage>
</ValidationRule>