force-app/main/default/objects/Knowledge__kav/validationRules/Check_Required_PriSec_Workflow_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Required_PriSec_Workflow_Field</fullName>
    <active>true</active>
    <description>Primary and Secondary Workflow Field is required when you create Knowledge Article Record</description>
    <errorConditionFormula>AND(OR(ISBLANK(TEXT(Primary_Workflow__c)),ISBLANK(TEXT(Secondary_Workflow__c))),ISPICKVAL(Knowledge_Source__c, &apos;DCP&apos;))</errorConditionFormula>
    <errorMessage>Primary workflow and Secondary workflow field is required.</errorMessage>
</ValidationRule>