force-app/main/default/objects/Knowledge__kav/validationRules/CheckKnowledgeRequiredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckKnowledgeRequiredFields</fullName>
    <active>true</active>
    <description>Validate if the mandatory knowledge fields are not blank</description>
    <errorConditionFormula>OR(
    ISBLANK( Summary ) ,
    LEN( Article_Body__c ) == 0
)</errorConditionFormula>
    <errorMessage>Summary and Article Body cannot be blank.</errorMessage>
</ValidationRule>