force-app/main/default/objects/Knowledge__kav/validationRules/CheckLastReviewDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckLastReviewDate</fullName>
    <active>true</active>
    <description>Only user with SS Manage Knowledge permission set can edit Date of Last Review field.</description>
    <errorConditionFormula>AND(NOT($Permission.SS_Manage_Knowledge), ISCHANGED( Date_of_Last_Annual_Review__c ) )</errorConditionFormula>
    <errorMessage>You do not have permission to edit this field.</errorMessage>
</ValidationRule>