force-app/main/default/objects/Knowledge__kav/validationRules/Restrict_Primary_Workflow_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Primary_Workflow_Update</fullName>
    <active>true</active>
    <description>Primary Workflow value can&apos;t be updated after Primary Approval completed</description>
    <errorConditionFormula>AND(
        ISCHANGED(Primary_Workflow__c),
        OR(ISPICKVAL(Review_Status__c,&apos;Pending Review - Primary Review in Progress&apos;),ISPICKVAL(Review_Status__c,&apos;Pending Review - Primary Review Complete&apos;)),NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c)
        )</errorConditionFormula>
    <errorMessage>The Primary Workflow field cannot be edited once Primary Review is Complete. If the Primary Workflow is incorrect, please reject the article and request the update before resubmitting for approval.</errorMessage>
</ValidationRule>