force-app/main/default/objects/Knowledge__kav/validationRules/Restrict_Workflow_Update_on_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Workflow_Update_on_Approval</fullName>
    <active>true</active>
    <description>Primary &amp; Secondary Approval can&apos;t be edited during Compliance Approval</description>
    <errorConditionFormula>AND(
        NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
        OR(
            AND(ISCHANGED(Primary_Workflow__c),ISPICKVAL(Review_Status__c,&apos;Pending Review - Secondary Review Complete&apos;)),
            AND(ISCHANGED(Secondary_Workflow__c),OR(ISPICKVAL(Review_Status__c,&apos;Pending Review - Primary Review Complete&apos;),ISPICKVAL(Review_Status__c,&apos;Pending Review - Secondary Review Complete&apos;)))
        )
        )</errorConditionFormula>
    <errorMessage>The Workflow fields cannot be edited during Compliance Review. If either Workflow is incorrect, please reject the article and request the update before resubmitting for approval.</errorMessage>
</ValidationRule>