force-app/main/default/objects/Knowledge__kav/listViews/Bioinformatics_Pending_1st_Approval.listView-meta.xml
<ListView>
    <fullName>Bioinformatics_Pending_1st_Approval</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>Review_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Primary_Approver__c</columns>
    <columns>Secondary_Approver__c</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Review_Status__c</field>
        <operation>equals</operation>
        <value>Pending Review - Review Not Started,Pending Review - Primary Review in Progress</value>
    </filters>
    <filters>
        <field>Primary_Workflow__c</field>
        <operation>equals</operation>
        <value>Bioinformatics</value>
    </filters>
    <label>Bioinformatics Pending 1st Approval</label>
    <sharedTo>
        <group>KB_Bioinformatics</group>
    </sharedTo>
</ListView>