force-app/main/default/objects/Knowledge__kav/listViews/Clinical_Pending_Compliance_Review.listView-meta.xml
<ListView>
    <fullName>Clinical_Pending_Compliance_Review</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Primary_Approver__c</columns>
    <columns>Secondary_Approver__c</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Review_Status__c</field>
        <operation>equals</operation>
        <value>Pending Review - Secondary Review Complete</value>
    </filters>
    <filters>
        <field>IVDDx_Article__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Clinical Pending Compliance Review</label>
    <sharedTo>
        <group>KB_Clinical</group>
    </sharedTo>
</ListView>